tests/cases/errors/parse/missing_semicolon.hc
//@ error: expected `;`
U0 Main()
{
  I64 x = 1
}
